Some more changes to the css

--- a/index.html
+++ b/index.html
@@ -34,7 +34,32 @@
             </footer>
         </aside>
         <header>
+            <div class="search-box">
+                <input type="text" placeholder="Search">
+                <button>
+                    <img src="search-btn.png" alt="" width="25px">
+                </button>
+            </div>
+            <div class="user-box">
+                <img src="images/user.png" alt="user">
+                <h3>John Doe</h3>
+                <button>Logout</button>
+            </div>
+            <div class="info-box">
+                <div class="user-info">
+                    <img src="images/user.png" alt="user">
+                    <div class="info">
+                        <h3>Hi There,</h3>
+                        <p>John Doe(@johndoe)</p>
+                    </div>
+                </div>
 
+                <div class="actions">
+                    <button>Follow</button>
+                    <button>Message</button>
+                    <button>Share</button>
+                </div>
+            </div>
         </header>
         <main>
 
