More changes to index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
             </div>
         </header>
         <main>
-
+            <div class="project-container"></div>
+            aside.
         </main>
     </div>
 </body>
